HOT FIX - issue 9 -login box/join ERS on mobile dashboard (not connected)

--- a/resources/assets/less/includes/pages/dashboard.less
+++ b/resources/assets/less/includes/pages/dashboard.less
@@ -433,7 +433,7 @@
 
 		.not-connected{
 			.colored-panel{
-				height:450px;
+				height:475px;
 
 				@media @phone {
 					height:475px;
@@ -454,7 +454,7 @@
 
 			.become-a-member{
 					&.panel{
-						height:450px;
+						height:475px;
 					}
 
 					.scrollable{
